# Asinus

./: .gitignore  README.md  python.py
asinus_code/asinus/: platformio.ini
asinus_code/asinus/lib/AsinusManager/: AsinusManager.cpp  AsinusManager.h
asinus_code/asinus/lib/GPSManager/: GPSManager.cpp  GPSManager.h
asinus_code/asinus/lib/ICMManager/: ICMManager.cpp  ICMManager.h
asinus_code/asinus/lib/RelayManager/: RelayManager.cpp  RelayManager.h
asinus_code/asinus/lib/motor_handler/: MotorManager.cpp  MotorManager.h  hoverserial.h  motor_handler.cpp  motor_handler.h  util.h
asinus_code/asinus/src/: main.cpp
asinus_code/asinus/src/lib/GPSManager/: GPSManager.h
asinus_code/asinus/src/lib/ICMManager/: ICMManager.h
asinus_code/asinus/src/lib/motor_handler/: motor_handler.cpp
asinus_code/asinus/src/src/: main.cpp
asinus_demo_bringup/: CMakeLists.txt  package.xml
asinus_demo_bringup/config/: asinus_controllers.yaml  asinus_controllers_2_wheel.yaml
asinus_demo_bringup/launch/: asinus_2_wheel.launch.py  hoverboard.launch.py
asinus_description/: CMakeLists.txt  Keys.txt  keys.sh
asinus_description/asinus/: asinus.urdf.xacro  asinus_2_wheel.urdf.xacro  config.json  control.xacro  control_2_wheel.xacro  control_4_wheel.xacro  robot_2_wheel.urdf  robot_4_wheel.urdf
asinus_description/asinus/assets/: castershaft.part  castershaft.stl  casterwheel1.part  casterwheel1.stl  davi0c08ca42kk0b.part  davi0c08ca42kk0b.stl  davi0c08ca42kk0b__10.part  davi0c08ca42kk0b__10.stl  davi0c08ca42kk0b__11.part  davi0c08ca42kk0b__11.stl  davi0c08ca42kk0b__12.part  davi0c08ca42kk0b__12.stl  davi0c08ca42kk0b__13.part  davi0c08ca42kk0b__13.stl  davi0c08ca42kk0b__14.part  davi0c08ca42kk0b__14.stl  davi0c08ca42kk0b__15.part  davi0c08ca42kk0b__15.stl  davi0c08ca42kk0b__16.part  davi0c08ca42kk0b__16.stl  davi0c08ca42kk0b__2.part  davi0c08ca42kk0b__2.stl  davi0c08ca42kk0b__3.part  davi0c08ca42kk0b__3.stl  davi0c08ca42kk0b__4.part  davi0c08ca42kk0b__4.stl  davi0c08ca42kk0b__5.part  davi0c08ca42kk0b__5.stl  davi0c08ca42kk0b__6.part  davi0c08ca42kk0b__6.stl  davi0c08ca42kk0b__7.part  davi0c08ca42kk0b__7.stl  davi0c08ca42kk0b__8.part  davi0c08ca42kk0b__8.stl  davi0c08ca42kk0b__9.part  davi0c08ca42kk0b__9.stl  frame.part  frame.stl  hoverboard_wheel_6_5in.part  hoverboard_wheel_6_5in.stl  (+10 more)
asinus_description/launch/: asinus_description.launch.py
asinus_description/rviz/: diffbot_view.rviz
asinus_gz/: package.xml
asinus_gz/launch/: asinus_one_robot.launch.py
asinus_gz/urdf/: asinus_gz.xacro
asinus_gz/urdf/include/: gazebo.urdf.xacro
asinus_gz/urdf/include/sensors/: imu.urdf.xacro  kinect.urdf.xacro  lidar.urdf.xacro
asinus_hardware_interface/: CMakeLists.txt  asinus_hardware_interface.xml  package.xml
asinus_hardware_interface/include/asinus_hardware_interface/: asinus_hardware_interface.hpp  async_serial.hpp  motor_wheel.hpp  serial_port_protocol.hpp  serial_port_service.hpp
asinus_hardware_interface/src/: asinus_hardware_interface.cpp  async_serial.cpp  serial_port_service.cpp
asinus_nav/: CMakeLists.txt  package.xml
asinus_ros2_control/: CMakeLists.txt  package.xml
asinus_slam/: CMakeLists.txt  package.xml
ros2_control_asinus/config/: diffbot_controllers.yaml
ros2_control_asinus/launch/: diffbot.launch.py
ros2_control_asinus/test/: test_urdf_xacro.py
